--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/dev": "^0.2.3",
+    "@expo-google-fonts/comic-neue": "^0.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
