--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,17 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-camera": "~15.0.16",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-screen-orientation": "^7.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-pager-view": "6.3.0",
-    "expo-file-system": "~17.0.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
