--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,6 +4,12 @@
     "slug": "frontend",
     "plugins": [
       [
+        "expo-screen-orientation",
+        {
+          "initialOrientation": "DEFAULT"
+        }
+      ],
+      [
         "expo-camera",
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
