--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/baloo-2": "^0.2.3",
     "@expo-google-fonts/comic-neue": "^0.2.3",
+    "@expo-google-fonts/dev": "^0.2.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "eventemitter3": "^5.0.1",
